--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 # C extensions
 *.so
 
+
 # Distribution / packaging
 .Python
 build/
@@ -129,6 +130,6 @@ dmypy.json
 src/lancaster_layer.ipynb
 src/make_lancaster_embeddings.ipynb
 src/word_embeddings.ipynb
-
+src/*.pickle
 # Pyre type checker
 .pyre/
